--- a/index.html
+++ b/index.html
@@ -1,104 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Smart Face Attendance System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Face API Library -->
-  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
+  <script defer src="https://unpkg.com/face-api.js"></script>
 
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
+      background: #0b1221;
       color: white;
+      font-family: Arial, sans-serif;
       text-align: center;
+      padding: 20px;
     }
 
     h1 {
+      color: #3ba4ff;
+      margin-bottom: 20px;
+    }
+
+    #video {
+      width: 500px;
+      height: 350px;
+      border: 4px solid #3ba4ff;
+      border-radius: 10px;
+      background: rgba(255,255,255,0.05);
+    }
+
+    #startBtn {
       margin-top: 20px;
-      font-size: 28px;
-      color: #38bdf8;
+      padding: 12px 25px;
+      border-radius: 8px;
+      background: #3b82f6;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      border: none;
     }
 
-    .container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
+    #dashboard {
+      margin-top: 30px;
+      background: rgba(255,255,255,0.08);
       padding: 20px;
-      flex-wrap: wrap;
-    }
-
-    video {
-      width: 420px;
-      height: 320px;
-      border: 3px solid #38bdf8;
-      border-radius: 10px;
-    }
-
-    .panel {
-      width: 350px;
-      background: #1e293b;
-      padding: 15px;
-      border-radius: 10px;
+      border-radius: 15px;
+      width: 500px;
+      margin-left: auto;
+      margin-right: auto;
       text-align: left;
     }
 
-    .student {
-      background: #334155;
-      padding: 8px;
-      margin: 5px 0;
-      border-radius: 5px;
-    }
-
-    .present {
-      color: #22c55e;
+    .section-title {
+      font-size: 22px;
+      margin-bottom: 10px;
       font-weight: bold;
     }
 
-    button {
-      padding: 10px 20px;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-      margin-top: 15px;
-    }
-
-    button:hover {
-      background: #1d4ed8;
+    .name {
+      font-size: 18px;
+      margin: 5px 0;
     }
   </style>
+
 </head>
 
 <body>
+
   <h1>SMART FACE ATTENDANCE SYSTEM</h1>
 
-  <div class="container">
-    <div>
-      <video id="camera" autoplay muted></video>
-      <button onclick="startAttendance()">Start Attendance</button>
-    </div>
+  <video id="video" autoplay muted></video>
 
-    <div class="panel">
-      <h2>Present Students</h2>
-      <div id="presentList"></div>
+  <br />
+  <button id="startBtn">Start Attendance</button>
 
-      <h2 style="margin-top:20px;">Pending Students</h2>
-      <div id="pendingList"></div>
-    </div>
+  <div id="dashboard">
+    <div class="section-title">Present Students</div>
+    <div id="presentList"></div>
+
+    <div class="section-title" style="margin-top:20px;">Pending Students</div>
+    <div id="pendingList"></div>
   </div>
 
-  <script>
-    let labeledFaceDescriptors = [];
-    let faceMatcher;
-    let attendanceMarked = {};
+<script>
+  const video = document.getElementById("video");
 
-    const students = [
+  // ---------------------------------------------------------
+  // LOAD MODELS (GitHub Pages FIX) — using ./models/
+  // ---------------------------------------------------------
+  Promise.all([
+    faceapi.nets.tinyFaceDetector.loadFromUri("./models"),
+    faceapi.nets.faceRecognitionNet.loadFromUri("./models"),
+    faceapi.nets.faceLandmark68Net.loadFromUri("./models")
+  ]).then(() => console.log("Models Loaded ✔"));
+
+  // ---------------------------------------------------------
+  // START CAMERA
+  // ---------------------------------------------------------
+  document.getElementById("startBtn").onclick = async () => {
+    navigator.mediaDevices.getUserMedia({ video: {} })
+      .then(stream => {
+        video.srcObject = stream;
+      });
+  };
+
+  // ---------------------------------------------------------
+  // LOAD STUDENT IMAGES
+  // ---------------------------------------------------------
+  async function loadStudentData() {
+    const names = [
       "Ajith_Kumar",
       "Hari_Chandana",
       "Keerthana",
@@ -106,94 +116,83 @@
       "Vedha_Sai_G"
     ];
 
-    students.forEach(name => attendanceMarked[name] = false);
+    let labeledDescriptors = [];
 
-    async function loadModels() {
-      await faceapi.nets.faceRecognitionNet.loadFromUri("./models");
-      await faceapi.nets.faceLandmark68Net.loadFromUri("./models");
-      await faceapi.nets.ssdMobilenetv1.loadFromUri("./models");
-    }
+    for (let name of names) {
+      const imgUrl = `./students/${name}.jpeg`;
+      const img = await faceapi.fetchImage(imgUrl);
 
-    async function loadStudentFaces() {
-      for (let student of students) {
-        const imgUrl = `students/${student}.jpeg`;
-        const img = await faceapi.fetchImage(imgUrl);
+      const detection = await faceapi
+        .detectSingleFace(img)
+        .withFaceLandmarks()
+        .withFaceDescriptor();
 
-        const detection = await faceapi
-          .detectSingleFace(img)
-          .withFaceLandmarks()
-          .withFaceDescriptor();
-
-        if (!detection) {
-          console.error("NO FACE FOUND FOR:", student);
-          continue;
-        }
-
-        labeledFaceDescriptors.push(
-          new faceapi.LabeledFaceDescriptors(student, [detection.descriptor])
-        );
+      if (!detection) {
+        console.log("❌ Face not detected for:", name);
+        continue;
       }
 
-      faceMatcher = new faceapi.FaceMatcher(labeledFaceDescriptors);
-      updatePendingList();
+      labeledDescriptors.push(
+        new faceapi.LabeledFaceDescriptors(name, [detection.descriptor])
+      );
     }
 
-    async function startCamera() {
-      const video = document.getElementById("camera");
-      navigator.mediaDevices.getUserMedia({ video: true })
-        .then(stream => video.srcObject = stream);
-    }
+    return labeledDescriptors;
+  }
 
-    function updateLists() {
-      const presentDiv = document.getElementById("presentList");
-      const pendingDiv = document.getElementById("pendingList");
+  // ---------------------------------------------------------
+  // FACE MATCHING + ATTENDANCE
+  // ---------------------------------------------------------
+  video.addEventListener("play", async () => {
+    const labeledDescriptors = await loadStudentData();
+    const faceMatcher = new faceapi.FaceMatcher(labeledDescriptors, 0.45);
 
-      presentDiv.innerHTML = "";
-      pendingDiv.innerHTML = "";
+    const presentSet = new Set();
+    const allStudents = [
+      "Ajith_Kumar",
+      "Hari_Chandana",
+      "Keerthana",
+      "Shiva_Narayana",
+      "Vedha_Sai_G"
+    ];
 
-      students.forEach(student => {
-        if (attendanceMarked[student]) {
-          presentDiv.innerHTML += `<div class="student present">${student}</div>`;
-        } else {
-          pendingDiv.innerHTML += `<div class="student">${student}</div>`;
+    setInterval(async () => {
+      const detections = await faceapi
+        .detectAllFaces(video, new faceapi.TinyFaceDetectorOptions())
+        .withFaceLandmarks()
+        .withFaceDescriptors();
+
+      detections.forEach(det => {
+        const match = faceMatcher.findBestMatch(det.descriptor);
+
+        if (match.label !== "unknown") {
+          presentSet.add(match.label);
         }
       });
-    }
 
-    function updatePendingList() {
-      updateLists();
-    }
+      updateDashboard(presentSet, allStudents);
+    }, 1000);
+  });
 
-    async function startAttendance() {
-      const video = document.getElementById("camera");
+  // ---------------------------------------------------------
+  // UPDATE UI
+  // ---------------------------------------------------------
+  function updateDashboard(presentSet, all) {
+    const presentList = document.getElementById("presentList");
+    const pendingList = document.getElementById("pendingList");
 
-      video.addEventListener("play", () => {
-        const interval = setInterval(async () => {
-          const detections = await faceapi
-            .detectAllFaces(video)
-            .withFaceLandmarks()
-            .withFaceDescriptors();
+    presentList.innerHTML = "";
+    pendingList.innerHTML = "";
 
-          detections.forEach(d => {
-            const result = faceMatcher.findBestMatch(d.descriptor);
-            const name = result.label;
-
-            if (students.includes(name) && !attendanceMarked[name]) {
-              attendanceMarked[name] = true;
-              updateLists();
-            }
-          });
-        }, 1000);
-      });
-    }
-
-    // Auto start initialization
-    (async () => {
-      await loadModels();
-      await loadStudentFaces();
-      await startCamera();
-    })();
-  </script>
+    all.forEach(name => {
+      if (presentSet.has(name)) {
+        presentList.innerHTML += `<div class="name">✔ ${name}</div>`;
+      } else {
+        pendingList.innerHTML += `<div class="name">⏳ ${name}</div>`;
+      }
+    });
+  }
+</script>
 
 </body>
 </html>
