--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       showPopup();
       playBeep();
       speak();
-    }, 20000); // 20 seconds gap
+    }, 10000); // ✅ 10 seconds gap
 
     startBtn.disabled = true;
     stopBtn.disabled = false;
